# soccermanager

./: .gitignore  CONTRIBUTING.md  README.md  REFACTORING_PLAN.md  RELEASE-0.2.0-IMPLEMENTATION-PLAN.md  RELEASE-0.2.0-ROADMAP.md  index.html  package-lock.json  package.json  run_git_commands.bat  vite.config.ts  vitest-mainmenu.json
src-tauri/crates/db/: Cargo.toml
src-tauri/crates/db/src/: game_database.rs  game_persistence.rs  legacy_migration.rs  lib.rs  manager.rs  migrations.rs  save.rs  save_index.rs  save_index_manager.rs  save_manager.rs
src-tauri/crates/db/src/repositories/: league_repo.rs  manager_repo.rs  message_repo.rs  meta_repo.rs  mod.rs  news_repo.rs  objective_repo.rs  player_repo.rs  (+4 more)
src-tauri/crates/ofm_core/: Cargo.toml
src-tauri/crates/ofm_core/src/: aging.rs  ai_hiring.rs  board_objectives.rs  clock.rs  club.rs  contract_wage_policy.rs  contracts.rs  currency.rs  delegated_renewals.rs  end_of_season.rs  finances.rs  firing.rs  game.rs  generator.rs  history_generation.rs  job_offers.rs  lib.rs  live_match_manager.rs  messages.rs  news.rs  player_events.rs  player_identity.rs  player_rating.rs  random_events.rs  schedule.rs  scouting.rs  season_awards.rs  season_context.rs  squad_safety.rs  state.rs  training.rs  transfers.rs  turn.rs
src-tauri/crates/ofm_core/tests/: club_tests.rs  contracts_tests.rs  end_of_season_tests.rs  finances_tests.rs  live_match_manager_tests.rs  messages_tests.rs  player_events_tests.rs  player_rating_tests.rs  random_events_tests.rs  scouting_tests.rs  training_tests.rs  transfers_tests.rs  turn_tests.rs
(+594 files in other folders)
