[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
rusqlite_migration = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
