[package]
name = "ofm_core"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
domain = { version = "0.1.0", path = "../domain" }
engine = { version = "0.1.0", path = "../engine" }
rand = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.21.0", features = ["v4"] }
